--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,9 @@
 
 .byebug_history
 
-/config/database.yml
 /config/secrets.yml
+/config/database.yml
+
+
+.framgia-ci-result.temp.yml
+/.framgia-ci-reports
